Переработаны проыерки в методе shape, поправлены Unit тесты, отредактирован README

--- a/app/Makefile
+++ b/app/Makefile
@@ -30,6 +30,9 @@ lint:
 check-deps:
 	./gradlew dependencyUpdates -Drevision=release
 
+validator:
+	./gradlew --console plain jshell
+
 build-run: build run
 
 .PHONY: build
