--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'application'
     id 'se.patrikerdes.use-latest-versions' version '0.2.18'
     id 'com.github.ben-manes.versions' version '0.50.0'
+    id "com.github.mrsarm.jshell.plugin" version "1.2.1"
 }
 
 group 'hexlet.code'
